# adjustBias

./: .gitignore  CMakeLists.txt  ConfigReader.hpp  FileHandler.hpp  LICENSE  Logger.hpp  README.md  RemoteCommandExecutor.hpp  SSHManager.hpp  main.cpp  widget.cpp  widget.h  widget.ui
config/: config.ini
docs/: 2025-11-22_RELIABILITY_FIXES.md  CODE_OPTIMIZATION_REPORT.md  CRASH_PREVENTION_REPORT.md  DOCS_INDEX.md  OPTIMIZATION_SUMMARY.md  QUICK_OPTIMIZATION_GUIDE.md  README.md  SSH_OPTIMIZATION_REPORT.md
docs/archive/: 2025-11-24_COMPILE_FIXES.md  2025-11-24_SSH_OPTIMIZATION.md  2025-11-25_CHANGES.md
include/: Config.h  ConfigReader.h  ConnectionPool.h  Exceptions.h  FileHandler.h  Logger.h  ParameterValidator.h  Parameters.h  RemoteCommandExecutor.h  ResourceManager.h  SSHManager.h  resources.qrc  widget.h  widget.ui
src/: ConfigReader.cpp  FileHandler.cpp  Logger.cpp  RemoteCommandExecutor.cpp  SSHManager.cpp  main.cpp  widget.cpp  widget_backup.cpp
